syntax = "proto3";

service NounParser {
    rpc Parse (ParseRequest) returns (ParseResponse) {}
}

message ParseRequest {
    bytes word = 1;
}

message ParseResponse {
    bytes json = 1;
}
